--- a/codepipeline/lambdaTemp.yml
+++ b/codepipeline/lambdaTemp.yml
@@ -2,7 +2,7 @@ AWSTemplateFormatVersion: '2010-09-09'
 Transform: 'AWS::Serverless-2016-10-31'
 Description: Lambda CD
 Resources:
- LambdaFunctions:
+ LambdaFunctions1:
   Type: AWS::Serverless::Function
   Properties:
    Handler: index-photos.lambda_handler
@@ -16,7 +16,7 @@ Resources:
    Environment:
     Variables:
         REGION: us-east-1
- LambdaFunctions:
+ LambdaFunctions2:
   Type: AWS::Serverless::Function
   Properties:
    Handler: search-photos.lambda_handler
