--- a/codepipeline/buildspec.yml
+++ b/codepipeline/buildspec.yml
@@ -19,7 +19,7 @@ phases:
     commands:
       # Install dependencies from requirements.txt into the lambda folder, if the file exists.
       - if [ -f lambda/requirements.txt ]; then pip install -r lambda/requirements.txt -t lambda; fi
-      # - aws cloudformation package --template-file lambdaTemp.yml --s3-bucket p1-codepipeline --output-template-file  outputTemplate.yml
+      - aws cloudformation package --template-file lambdaTemp.yml --s3-bucket p1-codepipeline --output-template-file  outputTemplate.yml
 
   pre_build:
     commands:
