--- a/codepipeline/lambdaTemp.yml
+++ b/codepipeline/lambdaTemp.yml
@@ -2,13 +2,13 @@ AWSTemplateFormatVersion: '2010-09-09'
 Transform: 'AWS::Serverless-2016-10-31'
 Description: Lambda CD
 Resources:
- LambdaFunctions:
+ LambdaFunctions1:
   Type: AWS::Serverless::Function
   Properties:
    Handler: index-photos.lambda_handler
    Runtime: python3.8
    FunctionName: SamplePython
-   CodeUri: ./lambda #Directory the source file is
+   CodeUri: lambda #Directory the source file is
    Description: 'Lambda for CD'
    MemorySize: 128
    Timeout: 30
@@ -16,13 +16,13 @@ Resources:
    Environment:
     Variables:
         REGION: us-east-1
- LambdaFunctions:
+ LambdaFunctions2:
   Type: AWS::Serverless::Function
   Properties:
    Handler: search-photos.lambda_handler
    Runtime: python3.8
    FunctionName: SamplePython
-   CodeUri: ./lambda #Directory the source file is
+   CodeUri: lambda #Directory the source file is
    Description: 'Lambda for CD'
    MemorySize: 128
    Timeout: 30
