--- a/codepipeline/lambdaTemp.yml
+++ b/codepipeline/lambdaTemp.yml
@@ -5,10 +5,10 @@ Resources:
  LambdaFunctions1:
   Type: AWS::Serverless::Function
   Properties:
-   Handler: index-photos.lambda_handler
+   Handler: index.lambda_handler
    Runtime: python3.8
    FunctionName: SamplePython
-   CodeUri: ../lambda #Directory the source file is
+   CodeUri: ../lambda
    Description: 'Lambda for CD'
    MemorySize: 128
    Timeout: 30
@@ -22,7 +22,7 @@ Resources:
    Handler: search-photos.lambda_handler
    Runtime: python3.8
    FunctionName: SamplePython
-   CodeUri: ../lambda #Directory the source file is
+   CodeUri: ../lambda
    Description: 'Lambda for CD'
    MemorySize: 128
    Timeout: 30
