--- a/codepipeline/buildspec.yml
+++ b/codepipeline/buildspec.yml
@@ -1,41 +1,40 @@
-# version: 0.1
-# phases:
-# install:
-#   commands:
-#     - aws cloudformation package --template-file lambdaTemp.yml --s3-bucket p1-codepipeline --output-template-file  outputTemplate.yml
-#     # - aws cloudformation package --template-file frontTemp.yml --s3-bucket p1-codepipeline --output-template-file outputTemplate.yaml
-# artifacts:
-# type: zip
-# files:
-#   - lambdaTemp.yml
-#   - frontTemp.yml
-#   - outputTemplate.yml
-
-
 version: 0.2
-
 phases:
-  install:
-    commands:
-      # Install dependencies from requirements.txt into the lambda folder, if the file exists.
-      - if [ -f lambda/requirements.txt ]; then pip install -r lambda/requirements.txt -t lambda; fi
-      - aws cloudformation package --template-file codepipeline/lambdaTemp.yml --s3-bucket p1-codepipeline --output-template-file  outputTemplate.yml
-
-  pre_build:
-    commands:
-      # Optional pre-build steps, like running tests or linting
-      - echo Pre-build steps...
-
-  build:
-    commands:
-      # Navigate to the lambda folder and package each Python file into its own zip file
-      - cd lambda
-      - zip -r index-photos.zip index-photos.py
-      - zip -r search-photos.zip search-photos.py
-
+install:
+  commands:
+    - pip install -r requirements.txt -t .
+    - aws cloudformation package --template-file lambdaTemp.yml --s3-bucket p1-codepipeline --output-template-file  outputTemplate.yml
+    # - aws cloudformation package --template-file frontTemp.yml --s3-bucket p1-codepipeline --output-template-file outputTemplate.yaml
 artifacts:
-  files:
-    - lambda/index-photos.zip
-    - lambda/search-photos.zip
-    - lambdaTemp.yml
-    - outputTemplate.yaml
+files:
+  - lambdaTemp.yml
+  - outputTemplate.yml
+
+
+# version: 0.2
+
+# phases:
+#   install:
+#     commands:
+#       # Install dependencies from requirements.txt into the lambda folder, if the file exists.
+#       - if [ -f lambda/requirements.txt ]; then pip install -r lambda/requirements.txt -t lambda; fi
+#       - aws cloudformation package --template-file codepipeline/lambdaTemp.yml --s3-bucket p1-codepipeline --output-template-file  outputTemplate.yml
+
+#   pre_build:
+#     commands:
+#       # Optional pre-build steps, like running tests or linting
+#       - echo Pre-build steps...
+
+#   build:
+#     commands:
+#       # Navigate to the lambda folder and package each Python file into its own zip file
+#       - cd lambda
+#       - zip -r index-photos.zip index-photos.py
+#       - zip -r search-photos.zip search-photos.py
+
+# artifacts:
+#   files:
+#     - lambda/index-photos.zip
+#     - lambda/search-photos.zip
+#     - lambdaTemp.yml
+#     - outputTemplate.yaml
