--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,7 +3,7 @@ phases:
   build:
     commands:
      # - pip install -r requirements.txt -t .
-      - aws cloudformation package --template-file codepipeline/lambdaTemp.yml --s3-bucket p1-codepipeline-ss --output-template-file  codepipeline/outputTemplate.yml
+      - aws cloudformation package --template-file lambdaTemp.yml --s3-bucket p1-codepipeline-ss --output-template-file  outputTemplate.yml
       # - aws cloudformation package --template-file frontTemp.yml --s3-bucket p1-codepipeline --output-template-file outputTemplate.yaml
 artifacts:
   files:
