--- a/lambdaTemp.yml
+++ b/lambdaTemp.yml
@@ -8,7 +8,7 @@ Resources:
    Handler: index.lambda_handler
    Runtime: python3.8
    FunctionName: SamplePython
-   CodeUri: ./../lambda
+   CodeUri: ./
    Description: 'Lambda for CD'
    MemorySize: 128
    Timeout: 30
@@ -22,7 +22,7 @@ Resources:
    Handler: search-photos.lambda_handler
    Runtime: python3.8
    FunctionName: SamplePython
-   CodeUri: ./../lambda
+   CodeUri: ./
    Description: 'Lambda for CD'
    MemorySize: 128
    Timeout: 30
